// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders error 1`] = `
<div>
  error
</div>
`;

exports[`renders loading 1`] = `
<div>
  Loading
</div>
`;

exports[`renders permalink view container 1`] = `
<withContext(createMutationContainer(Relay(PermalinkViewContainer)))
  asset={Object {}}
  comment={Object {}}
/>
`;
